--- a/templates/includes/sidebar.html
+++ b/templates/includes/sidebar.html
@@ -193,25 +193,25 @@
             <li class="menu-title">
                <span>Main Menu</span>
             </li>
-            <li class="{% active_link 'hodpage' 'active' %}">
+            <li class="{% active_link '' 'active' %}">
                <a href="{% url 'hodpage' %}"><span> Dashboard</span></a>
             </li>
-            <li class="{% active_link 'hodpage' 'active' %}">
-               <a href="{% url 'hodpage' %}"><i class="fas fa-calendar-alt"></i><span> View Attenance</span></a>
+            <li class="{% active_link '' 'active' %}">
+               <a href="{% url 'viewstudentattendance' %}"><i class="fas fa-calendar-alt"></i><span> View Attenance</span></a>
             </li>
-            <li class="{% active_link 'hodpage' 'active' %}">
+            <li class="{% active_link '' 'active' %}">
                <a href="{% url 'takeattendance' %}"><i class="fas fa-calendar-alt"></i><span> Take Attenance</span></a>
             </li>
-            <li class="{% active_link 'hodpage' 'active' %}">
+            <li class="{% active_link '' 'active' %}">
                <a href="{% url 'hodpage' %}"><i class="fas fa-poll-h"></i><span> Add Result</span></a>
             </li>
-            <li class="{% active_link 'hodpage' 'active' %}">
+            <li class="{% active_link '' 'active' %}">
                <a href="{% url 'staffapplyleave' %}"><i class="fas fa-envelope-open"></i><span> Apply Leave</span></a>
             </li>
-            <li class="{% active_link 'hodpage' 'active' %}">
+            <li class="{% active_link '' 'active' %}">
                <a href="{% url 'stafffeedback' %}"><i class="fas fa-comment"></i><span> Send Feedback</span></a>
             </li>
-            <li class="{% active_link 'hodpage' 'active' %}">
+            <li class="{% active_link '' 'active' %}">
                <a href="{% url 'notification' %}"><i class="fas fa-bell"></i><span>Notification</span></a>
             </li>
             <li>
